Implement OCLintSensor correctly Add unit tests